Using Blueprints to Discover C++

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -15,7 +15,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
 GameDefaultMap=/Game/BattleGround.BattleGround
-GlobalDefaultGameMode=/Game/MyBattleTankGameMode_BP.MyBattleTankGameMode_BP_C
+GlobalDefaultGameMode=/Game/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
