3rd Person Camera Control

--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -46,6 +46,10 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Turret_Clockwise",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="NewActionMapping_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=Gamepad_RightY)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
