Delegating to Components

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -14,7 +14,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/BattleGround.BattleGround
-GameDefaultMap=/Game/Levels/BattleGround.BattleGround
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
